 - Add: Fleet Lite
 - Mod: Sweepers adjusted for balance.
 - Fix: Most buildings should no longer ignore uni level.
 - Add: Overheating Parliament does damage.
 - Fix: Buildings should no longer get stuck in upgrading state.
 - Add: Allow login with "#<userid>".
 - Mod: "#" no longer permitted as leading character in empire names.

3.0908:
 - Mod: trash_messages_where now defaults to not returning deleted message IDs.
 - Mod: Firing BFG now requires captcha.
 - Fix: Jump Zone for BHG can now find needles in haystacks.
 - UI : Reasons for not being able to use a BHG function now always displayed for every task.
 - Fix: Instead of going via parliament, go via body or star to view_laws.  This allows everyone access to passed laws by a station.
 - UI : No more nagging if you want to spend halls.

3.0907:
 - Add: Timer added to colony object preventing passage into Neutral Zone.
 - Add: colonies and stations added to empire stat. planets kept to maintain backwards compatibility
 - Fix: Fetching Spies no longer will send more spies.
 - Add: Sabotage Defenses task added for spies.
 - Add: Bugout task for spies added to get spies home.
 - Mod: Replace cheap plastic parts on Space Station with steel.
 - Mod: Slight tweaking of AI behaviours.
 - Mod: Police Stations now have more thorough security on incoming visitors.

3.0906:
 - Fix: Some fixes to the send_ship_types API call.
 - Fix: Don't list platform plans for splitting in Dillon Forge.
 - Fix: Disable self-destruct works again.
 - Fix: Building/upgrade on SS has all buildings in parallel.
 - Mod: Damaged Gauntlet gives more granular infiltration time.
 - Mod: Spies take a break after teleporting home.
 - Mod: Improved unsustainable message to make it clearer.
 - Mod: Observatory now displays 30 rows not 25.
 - Mod: Option to send scows back home without any waste.
 - Mod: Update ChiselChat.
 - Mod: Plan list sorting now done more naturally.
 - Mod: Improve message handling speed (deleting, archiving).