@@ -1,11 +1,0 @@
-[
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "10" }
-]
