@@ -1,79 +1,123 @@
 [
-    { "class" : "Lacuna::DB::Result::Building::Archaeology", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Capitol", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::CloakingLab", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Development", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::DistributionCenter", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::DistributionCenter", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Espionage", "level" : "15" },
-    { "class" : "Lacuna::DB::Result::Building::Intelligence", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::MunitionsLab", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Observatory", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Oversight", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::AlgaePond", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::AmalgusMeadow", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::BeeldebanNest", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::DentonBrambles", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::GeoThermalVent", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::GratchsGauntlet", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::GreatBallOfJunk", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::InterDimensionalRift", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::NaturalSpring", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Permanent::Volcano", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::PilotTraining", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::PoliticsTraining", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Propulsion", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Security", "level" : "10" },
-    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Stockpile", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Trade", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Exchanger", "level" : "25" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Exchanger", "level" : "25" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Water::AtmosphericEvaporator", "level" : "25" },
-    { "class" : "Lacuna::DB::Result::Building::Water::AtmosphericEvaporator", "level" : "25" },
-    { "class" : "Lacuna::DB::Result::Building::Water::Storage", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Water::Storage", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Ore::Storage", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Ore::Storage", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Energy::Reserve", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Energy::Reserve", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Food::Reserve", "level" : "30" },
-    { "class" : "Lacuna::DB::Result::Building::Food::Reserve", "level" : "30" }
+    { "class" : "Lacuna::DB::Result::Building::Permanent::BlackHoleGenerator", "level" : "30", "x" : "-5", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::GratchsGauntlet", "level" : "30", "x" : "-5", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-5", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-5", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-5", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-5", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-5", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-5", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-5", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-5", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-5", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-4", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-4", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-4", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-4", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-4", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-4", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-3", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-3", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-3", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-3", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-3", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-2", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Shipyard", "level" : "30", "x" : "-2", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-2", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SAW", "level" : "30", "x" : "-2", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTi", "level" : "30", "x" : "-1", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTb", "level" : "30", "x" : "-1", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTc", "level" : "30", "x" : "-1", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Intelligence", "level" : "30", "x" : "-1", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Observatory", "level" : "30", "x" : "-1", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Development", "level" : "30", "x" : "-1", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-1", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-1", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-1", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-1", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "-1", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTh", "level" : "30", "x" : "0", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTa", "level" : "30", "x" : "0", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTd", "level" : "30", "x" : "0", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Security", "level" : "30", "x" : "0", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Archaeology", "level" : "30", "x" : "0", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::PlanetaryCommand", "level" : "30", "x" : "0", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "0", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "0", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "0", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "0", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "0", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTg", "level" : "30", "x" : "1", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTf", "level" : "30", "x" : "1", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::LCOTe", "level" : "30", "x" : "1", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Espionage", "level" : "30", "x" : "1", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Transporter", "level" : "30", "x" : "1", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Trade", "level" : "30", "x" : "1", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "1", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "1", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "1", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "1", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "1", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Waste::Sequestration", "level" : "30", "x" : "2", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::PilotTraining", "level" : "30", "x" : "2", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::MunitionsLab", "level" : "30", "x" : "2", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Propulsion", "level" : "30", "x" : "2", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::CloakingLab", "level" : "30", "x" : "2", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Oversight", "level" : "30", "x" : "2", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "2", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "2", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "2", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "2", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "2", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::TheftTraining", "level" : "30", "x" : "3", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::PoliticsTraining", "level" : "30", "x" : "3", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::MayhemTraining", "level" : "30", "x" : "3", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::IntelTraining", "level" : "30", "x" : "3", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::CitadelOfKnope", "level" : "30", "x" : "3", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::OracleOfAnid", "level" : "30", "x" : "3", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "3", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "3", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "3", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "3", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "3", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::Ravine", "level" : "30", "x" : "4", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::SpaceJunkPark", "level" : "30", "x" : "4", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::GreatBallOfJunk", "level" : "30", "x" : "4", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::KalavianRuins", "level" : "30", "x" : "4", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::GeoThermalVent", "level" : "30", "x" : "4", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::Volcano", "level" : "30", "x" : "4", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::AlgaePond", "level" : "30", "x" : "4", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "4", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "4", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "4", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "4", "y" : "5" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::InterDimensionalRift", "level" : "30", "x" : "5", "y" : "-5" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::PyramidJunkSculpture", "level" : "30", "x" : "5", "y" : "-4" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::MetalJunkArches", "level" : "30", "x" : "5", "y" : "-3" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::JunkHengeSculpture", "level" : "30", "x" : "5", "y" : "-2" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::CrashedShipSite", "level" : "30", "x" : "5", "y" : "-1" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::NaturalSpring", "level" : "30", "x" : "5", "y" : "0" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::MalcudField", "level" : "30", "x" : "5", "y" : "1" },
+    { "class" : "Lacuna::DB::Result::Building::Permanent::PantheonOfHagness", "level" : "30", "x" : "5", "y" : "2" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "5", "y" : "3" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "5", "y" : "4" },
+    { "class" : "Lacuna::DB::Result::Building::SpacePort", "level" : "30", "x" : "5", "y" : "5" }
 ]
